Make summary column overflow hidden fix bug 741809

--- a/media/css/remo/app.less
+++ b/media/css/remo/app.less
@@ -657,6 +657,17 @@ dl.sub-nav {
     }
 }
 
+div.overflow-fix-outer {
+    position: relative;
+    width: 300px;
+}
+
+div.overflow-fix-inner {
+    overflow: hidden;
+    white-space: nowrap;
+    position: absolute;
+    width: 100%;
+}
 
 /* -----------------------------------------
    Reports Styles
